@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11846 2005/11/06 23:58:45 jlam Exp $
+$NetBSD: CHANGES,v 1.11847 2005/11/07 00:02:10 joerg Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -5097,3 +5097,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated www/lighttpd to 1.4.7 [joerg 2005-11-06]
 	Added net/netpipes version 4.2 [jlam 2005-11-06]
 	Updated audio/xmix to 2.1nb1 [joerg 2005-11-06]
+	Updated pkgtools/pkglint to 4.38 [rillig 2005-11-07]
